遊戲開始介面完成 讀檔介面完成 設定介面完成 Code尚未實裝

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -86,9 +86,9 @@
     <Compile Include="Assets\02_Scripts\TranMove.cs" />
     <Compile Include="Assets\02_Scripts\UIBarControl.cs" />
     <Compile Include="Assets\02_Scripts\UIText.cs" />
-    <Compile Include="Assets\CharacterStats.cs" />
-    <Compile Include="Assets\PlayerStats.cs" />
-    <Compile Include="Assets\Stats.cs" />
+    <Compile Include="Assets\NotDoneYet\CharacterStats.cs" />
+    <Compile Include="Assets\NotDoneYet\PlayerStats.cs" />
+    <Compile Include="Assets\NotDoneYet\Stats.cs" />
     <Compile Include="Assets\Teleportation Pad\CustomTeleporter.cs" />
     <None Include="Assets\Teleportation Pad\README.txt" />
     <Reference Include="UnityEngine">
