--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Assets\02_Scripts\ArrowComponet.cs" />
     <Compile Include="Assets\02_Scripts\Billboard.cs" />
     <Compile Include="Assets\02_Scripts\BulletControl.cs" />
+    <Compile Include="Assets\02_Scripts\Equipment.cs" />
     <Compile Include="Assets\02_Scripts\EquipmentManager.cs" />
     <Compile Include="Assets\02_Scripts\GameMenu.cs" />
     <Compile Include="Assets\02_Scripts\GetHitEffect.cs" />
@@ -89,7 +90,6 @@
     <Compile Include="Assets\02_Scripts\TranMove.cs" />
     <Compile Include="Assets\02_Scripts\UIBarControl.cs" />
     <Compile Include="Assets\02_Scripts\UIText.cs" />
-    <Compile Include="Assets\02_Scripts\equipment.cs" />
     <Compile Include="Assets\NotDoneYet\CharacterStats.cs" />
     <Compile Include="Assets\NotDoneYet\PlayerStats.cs" />
     <Compile Include="Assets\NotDoneYet\Stats.cs" />
