儲存 讀取完成 Z儲存 X讀取 只影響到玩家位置及血量

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -93,6 +93,8 @@
     <Compile Include="Assets\NotDoneYet\CharacterStats.cs" />
     <Compile Include="Assets\NotDoneYet\PlayerStats.cs" />
     <Compile Include="Assets\NotDoneYet\Stats.cs" />
+    <Compile Include="Assets\PlayerData.cs" />
+    <Compile Include="Assets\SaveSystem.cs" />
     <Compile Include="Assets\SkillItem.cs" />
     <Compile Include="Assets\SkillItem1.cs" />
     <Compile Include="Assets\Teleportation Pad\CustomTeleporter.cs" />
