突刺普攻完成

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Assets\02_Scripts\TranMove.cs" />
     <Compile Include="Assets\02_Scripts\UIBarControl.cs" />
     <Compile Include="Assets\02_Scripts\UIText.cs" />
+    <Compile Include="Assets\NormalAttack.cs" />
     <Compile Include="Assets\NotDoneYet\CharacterStats.cs" />
     <Compile Include="Assets\NotDoneYet\PlayerStats.cs" />
     <Compile Include="Assets\NotDoneYet\Stats.cs" />
