敵人自動尋路初步完成

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -104,9 +104,12 @@
     <Compile Include="Assets\02_Scripts\UIBarControl.cs" />
     <Compile Include="Assets\02_Scripts\UIText.cs" />
     <Compile Include="Assets\02_Scripts\equipment.cs" />
+    <Compile Include="Assets\EnemyController.cs" />
+    <Compile Include="Assets\EnemyStats.cs" />
     <Compile Include="Assets\NotDoneYet\CharacterStats.cs" />
     <Compile Include="Assets\NotDoneYet\PlayerStats.cs" />
     <Compile Include="Assets\NotDoneYet\Stats.cs" />
+    <Compile Include="Assets\PlayerManager.cs" />
     <Compile Include="Assets\Teleportation Pad\CustomTeleporter.cs" />
     <None Include="Assets\Teleportation Pad\README.txt" />
     <Reference Include="UnityEngine">
