--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -9,7 +9,7 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{CF8D1591-D435-4ECA-23B8-9AB93972C3C2}</ProjectGuid>
+    <ProjectGuid>{4009206B-E535-B64A-B6F6-B79A15741A97}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <AssemblyName>Assembly-CSharp</AssemblyName>
@@ -66,6 +66,9 @@
     <Compile Include="Assets\02_Scripts\ArrowComponet.cs" />
     <Compile Include="Assets\02_Scripts\Billboard.cs" />
     <Compile Include="Assets\02_Scripts\BulletControl.cs" />
+    <Compile Include="Assets\02_Scripts\CharacterStats.cs" />
+    <Compile Include="Assets\02_Scripts\EnemyController.cs" />
+    <Compile Include="Assets\02_Scripts\EnemyStats.cs" />
     <Compile Include="Assets\02_Scripts\Equipment.cs" />
     <Compile Include="Assets\02_Scripts\EquipmentManager.cs" />
     <Compile Include="Assets\02_Scripts\GameMenu.cs" />
@@ -85,8 +88,10 @@
     <Compile Include="Assets\02_Scripts\PlayerControl.cs" />
     <Compile Include="Assets\02_Scripts\PlayerData.cs" />
     <Compile Include="Assets\02_Scripts\PlayerFaceDirection.cs" />
+    <Compile Include="Assets\02_Scripts\PlayerManager.cs" />
     <Compile Include="Assets\02_Scripts\PlayerOptions.cs" />
     <Compile Include="Assets\02_Scripts\PlayerSound.cs" />
+    <Compile Include="Assets\02_Scripts\PlayerStats.cs" />
     <Compile Include="Assets\02_Scripts\SaveSystem.cs" />
     <Compile Include="Assets\02_Scripts\Skill\AirAttack.cs" />
     <Compile Include="Assets\02_Scripts\Skill\FireMagic.cs" />
@@ -100,17 +105,12 @@
     <Compile Include="Assets\02_Scripts\Skill\Skillitem4.cs" />
     <Compile Include="Assets\02_Scripts\Skill\SoilWall.cs" />
     <Compile Include="Assets\02_Scripts\SoundSettings.cs" />
+    <Compile Include="Assets\02_Scripts\Stats.cs" />
     <Compile Include="Assets\02_Scripts\StoneDestroy.cs" />
+    <Compile Include="Assets\02_Scripts\SwordSpikeState.cs" />
     <Compile Include="Assets\02_Scripts\TranMove.cs" />
     <Compile Include="Assets\02_Scripts\UIBarControl.cs" />
     <Compile Include="Assets\02_Scripts\UIText.cs" />
-    <Compile Include="Assets\EnemyController.cs" />
-    <Compile Include="Assets\EnemyStats.cs" />
-    <Compile Include="Assets\NotDoneYet\CharacterStats.cs" />
-    <Compile Include="Assets\NotDoneYet\PlayerStats.cs" />
-    <Compile Include="Assets\NotDoneYet\Stats.cs" />
-    <Compile Include="Assets\PlayerManager.cs" />
-    <Compile Include="Assets\SwordSpikeState.cs" />
     <Compile Include="Assets\Teleportation Pad\CustomTeleporter.cs" />
     <None Include="Assets\Teleportation Pad\README.txt" />
     <Reference Include="UnityEngine">
@@ -642,31 +642,31 @@
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.5f1/Editor/Data/NetStandard/compat/2.0.0/shims/netfx/System.Xml.Serialization.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline.Editor">
-      <HintPath>C:/Users/User/Desktop/SourceTree/TeamProject/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
+      <HintPath>C:/Users/louise/Desktop/GitHub合作專案_V2/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VSCode.Editor">
-      <HintPath>C:/Users/User/Desktop/SourceTree/TeamProject/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
+      <HintPath>C:/Users/louise/Desktop/GitHub合作專案_V2/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>C:/Users/User/Desktop/SourceTree/TeamProject/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+      <HintPath>C:/Users/louise/Desktop/GitHub合作專案_V2/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UI">
-      <HintPath>C:/Users/User/Desktop/SourceTree/TeamProject/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
+      <HintPath>C:/Users/louise/Desktop/GitHub合作專案_V2/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline">
-      <HintPath>C:/Users/User/Desktop/SourceTree/TeamProject/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
+      <HintPath>C:/Users/louise/Desktop/GitHub合作專案_V2/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
     </Reference>
     <Reference Include="Unity.CollabProxy.Editor">
-      <HintPath>C:/Users/User/Desktop/SourceTree/TeamProject/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
+      <HintPath>C:/Users/louise/Desktop/GitHub合作專案_V2/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Rider.Editor">
-      <HintPath>C:/Users/User/Desktop/SourceTree/TeamProject/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
+      <HintPath>C:/Users/louise/Desktop/GitHub合作專案_V2/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-      <HintPath>C:/Users/User/Desktop/SourceTree/TeamProject/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+      <HintPath>C:/Users/louise/Desktop/GitHub合作專案_V2/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.UI">
-      <HintPath>C:/Users/User/Desktop/SourceTree/TeamProject/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
+      <HintPath>C:/Users/louise/Desktop/GitHub合作專案_V2/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup></ItemGroup>
