--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Assets\02_Scripts\PlayerOptions.cs" />
     <Compile Include="Assets\02_Scripts\PlayerSound.cs" />
     <Compile Include="Assets\02_Scripts\PlayerStats.cs" />
+    <Compile Include="Assets\02_Scripts\SaveLoad.cs" />
     <Compile Include="Assets\02_Scripts\SaveSystem.cs" />
     <Compile Include="Assets\02_Scripts\Skill\AirAttack.cs" />
     <Compile Include="Assets\02_Scripts\Skill\FireMagic.cs" />
@@ -110,7 +111,6 @@
     <Compile Include="Assets\02_Scripts\SwordSpikeState.cs" />
     <Compile Include="Assets\02_Scripts\TranMove.cs" />
     <Compile Include="Assets\02_Scripts\UIBarControl.cs" />
-    <Compile Include="Assets\02_Scripts\UIText.cs" />
     <Compile Include="Assets\Teleportation Pad\CustomTeleporter.cs" />
     <None Include="Assets\Teleportation Pad\README.txt" />
     <Reference Include="UnityEngine">
