--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Assets\02_Scripts\SwordSpikeState.cs" />
     <Compile Include="Assets\02_Scripts\TranMove.cs" />
     <Compile Include="Assets\02_Scripts\UIBarControl.cs" />
+    <Compile Include="Assets\MiniMap.cs" />
     <Compile Include="Assets\Teleportation Pad\CustomTeleporter.cs" />
     <None Include="Assets\Teleportation Pad\README.txt" />
     <Reference Include="UnityEngine">
