已可以滑鼠滾輪 搭配中鍵 技能發招 冷卻圖示待修復

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -9,7 +9,7 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{4009206B-E535-B64A-B6F6-B79A15741A97}</ProjectGuid>
+    <ProjectGuid>{E2125D15-B1D1-FB2B-1DDF-7878EF35BF68}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <AssemblyName>Assembly-CSharp</AssemblyName>
@@ -69,7 +69,6 @@
     <Compile Include="Assets\02_Scripts\CharacterStats.cs" />
     <Compile Include="Assets\02_Scripts\EnemyController.cs" />
     <Compile Include="Assets\02_Scripts\EnemyStats.cs" />
-    <Compile Include="Assets\02_Scripts\Equipment.cs" />
     <Compile Include="Assets\02_Scripts\EquipmentManager.cs" />
     <Compile Include="Assets\02_Scripts\GameMenu.cs" />
     <Compile Include="Assets\02_Scripts\GetHitEffect.cs" />
@@ -97,6 +96,7 @@
     <Compile Include="Assets\02_Scripts\SaveSystem.cs" />
     <Compile Include="Assets\02_Scripts\Skill\AirAttack.cs" />
     <Compile Include="Assets\02_Scripts\Skill\FireMagic.cs" />
+    <Compile Include="Assets\02_Scripts\Skill\SkillControl.cs" />
     <Compile Include="Assets\02_Scripts\Skill\SkillF5Launch.cs" />
     <Compile Include="Assets\02_Scripts\Skill\SkillF6Launch.cs" />
     <Compile Include="Assets\02_Scripts\Skill\SkillF8Launch.cs" />
@@ -112,6 +112,7 @@
     <Compile Include="Assets\02_Scripts\SwordSpikeState.cs" />
     <Compile Include="Assets\02_Scripts\TranMove.cs" />
     <Compile Include="Assets\02_Scripts\UIBarControl.cs" />
+    <Compile Include="Assets\02_Scripts\equipment.cs" />
     <Compile Include="Assets\Teleportation Pad\CustomTeleporter.cs" />
     <None Include="Assets\Teleportation Pad\README.txt" />
     <Reference Include="UnityEngine">
@@ -643,31 +644,31 @@
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.5f1/Editor/Data/NetStandard/compat/2.0.0/shims/netfx/System.Xml.Serialization.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline.Editor">
-      <HintPath>C:/Users/louise/Desktop/GitHub合作專案_V2/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
+      <HintPath>C:/Users/SKY/Documents/TEST10021919/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VSCode.Editor">
-      <HintPath>C:/Users/louise/Desktop/GitHub合作專案_V2/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
+      <HintPath>C:/Users/SKY/Documents/TEST10021919/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>C:/Users/louise/Desktop/GitHub合作專案_V2/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+      <HintPath>C:/Users/SKY/Documents/TEST10021919/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UI">
-      <HintPath>C:/Users/louise/Desktop/GitHub合作專案_V2/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
+      <HintPath>C:/Users/SKY/Documents/TEST10021919/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline">
-      <HintPath>C:/Users/louise/Desktop/GitHub合作專案_V2/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
+      <HintPath>C:/Users/SKY/Documents/TEST10021919/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
     </Reference>
     <Reference Include="Unity.CollabProxy.Editor">
-      <HintPath>C:/Users/louise/Desktop/GitHub合作專案_V2/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
+      <HintPath>C:/Users/SKY/Documents/TEST10021919/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Rider.Editor">
-      <HintPath>C:/Users/louise/Desktop/GitHub合作專案_V2/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
+      <HintPath>C:/Users/SKY/Documents/TEST10021919/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-      <HintPath>C:/Users/louise/Desktop/GitHub合作專案_V2/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+      <HintPath>C:/Users/SKY/Documents/TEST10021919/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.UI">
-      <HintPath>C:/Users/louise/Desktop/GitHub合作專案_V2/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
+      <HintPath>C:/Users/SKY/Documents/TEST10021919/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup></ItemGroup>
