新增人物走路 翻滾動畫

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Assets\02_Scripts\TranMove.cs" />
     <Compile Include="Assets\02_Scripts\UIBarControl.cs" />
     <Compile Include="Assets\MoveControll.cs" />
+    <Compile Include="Assets\PlayerAction.cs" />
     <Compile Include="Assets\Teleportation Pad\CustomTeleporter.cs" />
     <None Include="Assets\Teleportation Pad\README.txt" />
     <Reference Include="UnityEngine">
