--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -82,8 +82,10 @@
     <Compile Include="Assets\02_Scripts\ItemScriptableObject.cs" />
     <Compile Include="Assets\02_Scripts\LongRangeEnemyController.cs" />
     <Compile Include="Assets\02_Scripts\LookAtCursor.cs" />
+    <Compile Include="Assets\02_Scripts\MainMenu\CenterData.cs" />
+    <Compile Include="Assets\02_Scripts\MainMenu\Menu.cs" />
+    <Compile Include="Assets\02_Scripts\MainMenu\SoundSettings.cs" />
     <Compile Include="Assets\02_Scripts\MeleeEnemyController.cs" />
-    <Compile Include="Assets\02_Scripts\Menu.cs" />
     <Compile Include="Assets\02_Scripts\MiniMap.cs" />
     <Compile Include="Assets\02_Scripts\MonsterHealth.cs" />
     <Compile Include="Assets\02_Scripts\MonsterSpwan.cs" />
@@ -110,7 +112,6 @@
     <Compile Include="Assets\02_Scripts\Skill\Skillitem4.cs" />
     <Compile Include="Assets\02_Scripts\Skill\SoilWall.cs" />
     <Compile Include="Assets\02_Scripts\SkillAt360.cs" />
-    <Compile Include="Assets\02_Scripts\SoundSettings.cs" />
     <Compile Include="Assets\02_Scripts\Stats.cs" />
     <Compile Include="Assets\02_Scripts\StoneDestroy.cs" />
     <Compile Include="Assets\02_Scripts\SwordSpikeState.cs" />
