普通揮砍動畫修改完成

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Assets\02_Scripts\MiniMap.cs" />
     <Compile Include="Assets\02_Scripts\MonsterHealth.cs" />
     <Compile Include="Assets\02_Scripts\MonsterSpwan.cs" />
+    <Compile Include="Assets\02_Scripts\PlayerAction.cs" />
     <Compile Include="Assets\02_Scripts\PlayerControl.cs" />
     <Compile Include="Assets\02_Scripts\PlayerData.cs" />
     <Compile Include="Assets\02_Scripts\PlayerFaceDirection.cs" />
@@ -114,9 +115,7 @@
     <Compile Include="Assets\02_Scripts\StoneDestroy.cs" />
     <Compile Include="Assets\02_Scripts\TranMove.cs" />
     <Compile Include="Assets\02_Scripts\UIBarControl.cs" />
-    <Compile Include="Assets\05_Animation\CustomizeAnimation\Animation\AttackStart.cs" />
-    <Compile Include="Assets\MoveControll.cs" />
-    <Compile Include="Assets\PlayerAction.cs" />
+    <Compile Include="Assets\05_Animation\CustomizeAnimation\Animation\AttackState.cs" />
     <Compile Include="Assets\Teleportation Pad\CustomTeleporter.cs" />
     <None Include="Assets\Teleportation Pad\README.txt" />
     <Reference Include="UnityEngine">
