--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,6 @@
         "temp/": true,
         "Temp/": true
     },
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
+    "dotnet.defaultSolution": "TeamProject.sln"
 }
