--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,1 @@
-Assets/01_Project/External/TextMesh[[:space:]]Pro/Fonts/MSJH/MSJH[[:space:]]SDF.asset filter=lfs diff=lfs merge=lfs -text
+Assets/01_Project/External/TextMesh[[:space:]]Pro/Fonts/微軟正黑體/MSJH[[:space:]]SDF.asset filter=lfs diff=lfs merge=lfs -text
