--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 Assets/01_Project/External/TextMesh[[:space:]]Pro/Fonts/微軟正黑體/MSJH[[:space:]]SDF.asset filter=lfs diff=lfs merge=lfs -text
 Assets/01_Project/External/TextMesh[[:space:]]Pro/Fonts/微軟正黑體/MSJH[[:space:]]TTC filter=lfs diff=lfs merge=lfs -text
+Assets/01_Project/External/TextMesh[[:space:]]Pro/Fonts/微軟正黑體/MSJH.TTC filter=lfs diff=lfs merge=lfs -text
