--- a/Assets/01_Project/Runtime/Runtime.asmdef
+++ b/Assets/01_Project/Runtime/Runtime.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:ca93185289dafb04a824d51245de423b"
+        "GUID:ca93185289dafb04a824d51245de423b",
+        "GUID:d5c3d6397cf367c4e929b26020e61b86"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
